Loading ap and jtan backgrounds

--- a/GUI/Form/JtanPanels.ui
+++ b/GUI/Form/JtanPanels.ui
@@ -1,25 +1,35 @@
-<UI version="4.0" >
-  <class>JtanPanelsClass</class>
-  <widget class="QWidget" name="JtanPanelsClass" >
-    <property name="objectName" >
-      <string notr="true">JtanPanelsClass</string>
-    </property>
-    <property name="geometry" >
-      <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>600</width>
-        <height>400</height>
-      </rect>
-    </property>
-    <property name="windowTitle" >
-      <string>JtanPanels</string>
-    </property>
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
+ <class>JtanPanelsClass</class>
+ <widget class="QWidget" name="JtanPanelsClass">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>1920</width>
+    <height>1080</height>
+   </rect>
+  </property>
+  <property name="windowTitle">
+   <string>JtanPanels</string>
+  </property>
+  <widget class="QLabel" name="JTAN_Background">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1920</width>
+     <height>1080</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
-  <layoutDefault spacing="6" margin="11" />
-  <pixmapfunction></pixmapfunction>
-  <resources>
-    <include location="JtanPanels.qrc"/>
-  </resources>
-  <connections/>
-</UI>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <resources>
+  <include location="../Resources/JtanPanels.qrc"/>
+ </resources>
+ <connections/>
+</ui>
