--- a/GUI/Form/ApPanels.ui
+++ b/GUI/Form/ApPanels.ui
@@ -1,25 +1,35 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>ApPanelsClass</class>
- <widget class="QWidget" name="ApPanelsClass" >
-  <property name="objectName" >
-   <string notr="true">ApPanelsClass</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="ApPanelsClass">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>600</width>
-	<height>400</height>
+    <x>0</x>
+    <y>0</y>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>ApPanels</string>
   </property>
+  <widget class="QLabel" name="AP_Background">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1920</width>
+     <height>1080</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+  </widget>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources>
-   <include location="ApPanels.qrc"/>
+  <include location="../Resources/ApPanels.qrc"/>
  </resources>
  <connections/>
-</UI>
+</ui>
