Added ammo switch ui using gdsu and gui element names changed

--- a/GUI/Form/JtanPanels.ui
+++ b/GUI/Form/JtanPanels.ui
@@ -26,10 +26,10 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/JtanPanels.qrc">:/JtanPanels/Multimedia/GUI/JtanPanels.png</pixmap>
+    <pixmap>:/JtanPanels/Multimedia/GUI/JtanPanels.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_1">
+  <widget class="QPushButton" name="GDSU_btn_left_1">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -45,7 +45,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -55,7 +55,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_2">
+  <widget class="QPushButton" name="GDSU_btn_left_2">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -71,7 +71,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -81,7 +81,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_3">
+  <widget class="QPushButton" name="GDSU_btn_left_3">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -97,7 +97,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -107,7 +107,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_4">
+  <widget class="QPushButton" name="GDSU_btn_left_4">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -123,7 +123,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -133,7 +133,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_5">
+  <widget class="QPushButton" name="GDSU_btn_left_5">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -149,7 +149,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -159,7 +159,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_6">
+  <widget class="QPushButton" name="GDSU_btn_left_6">
    <property name="geometry">
     <rect>
      <x>67</x>
@@ -175,7 +175,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical1_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -185,7 +185,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_7">
+  <widget class="QPushButton" name="GDSU_btn_right_1">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -201,7 +201,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -211,7 +211,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_8">
+  <widget class="QPushButton" name="GDSU_btn_right_2">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -227,7 +227,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -237,7 +237,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_9">
+  <widget class="QPushButton" name="GDSU_btn_right_3">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -253,7 +253,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -263,7 +263,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_10">
+  <widget class="QPushButton" name="GDSU_btn_right_4">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -279,7 +279,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -289,7 +289,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_11">
+  <widget class="QPushButton" name="GDSU_btn_right_5">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -305,7 +305,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -315,7 +315,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_12">
+  <widget class="QPushButton" name="GDSU_btn_right_6">
    <property name="geometry">
     <rect>
      <x>1059</x>
@@ -331,7 +331,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_vertical2_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -341,7 +341,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_13">
+  <widget class="QPushButton" name="GDSU_btn_bottom_1">
    <property name="geometry">
     <rect>
      <x>228</x>
@@ -357,7 +357,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -367,7 +367,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_14">
+  <widget class="QPushButton" name="GDSU_btn_bottom_2">
    <property name="geometry">
     <rect>
      <x>336</x>
@@ -383,7 +383,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -393,7 +393,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_15">
+  <widget class="QPushButton" name="GDSU_btn_bottom_3">
    <property name="geometry">
     <rect>
      <x>447</x>
@@ -409,7 +409,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -419,7 +419,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_16">
+  <widget class="QPushButton" name="GDSU_btn_bottom_4">
    <property name="geometry">
     <rect>
      <x>555</x>
@@ -435,7 +435,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -445,7 +445,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_17">
+  <widget class="QPushButton" name="GDSU_btn_bottom_5">
    <property name="geometry">
     <rect>
      <x>663</x>
@@ -461,7 +461,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -471,7 +471,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_18">
+  <widget class="QPushButton" name="GDSU_btn_bottom_6">
    <property name="geometry">
     <rect>
      <x>766</x>
@@ -487,7 +487,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -497,7 +497,7 @@
     </size>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_19">
+  <widget class="QPushButton" name="GDSU_btn_bottom_7">
    <property name="geometry">
     <rect>
      <x>873</x>
@@ -513,7 +513,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_horizontal_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -542,7 +542,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_minus_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_minus_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -568,7 +568,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_plus_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_plus_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -594,7 +594,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_circle_pressed.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_button_circle_pressed.png</iconset>
    </property>
    <property name="iconSize">
@@ -620,7 +620,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_switch1_1.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_switch1_1.png</iconset>
    </property>
    <property name="iconSize">
@@ -646,7 +646,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_knob_1.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_knob_1.png</iconset>
    </property>
    <property name="iconSize">
@@ -669,7 +669,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/JtanPanels.qrc">:/JtanPanels/Multimedia/GUI/JTAN_panel1_led1.png</pixmap>
+    <pixmap>:/JtanPanels/Multimedia/GUI/JTAN_panel1_led1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_1_switch_2">
@@ -688,7 +688,7 @@
     <string/>
    </property>
    <property name="icon">
-    <iconset resource="../Resources/JtanPanels.qrc">
+    <iconset>
      <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_switch2_1.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_switch2_1.png</iconset>
    </property>
    <property name="iconSize">
