--- a/GUI/Form/ApPanels.ui
+++ b/GUI/Form/ApPanels.ui
@@ -26,10 +26,10 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/ApPanels.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/ApPanels.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_1">
+  <widget class="QPushButton" name="GDSU_btn_left_1">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -57,7 +57,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_2">
+  <widget class="QPushButton" name="GDSU_btn_left_2">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -85,7 +85,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_3">
+  <widget class="QPushButton" name="GDSU_btn_left_3">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -113,7 +113,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_4">
+  <widget class="QPushButton" name="GDSU_btn_left_5">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -141,7 +141,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_5">
+  <widget class="QPushButton" name="GDSU_btn_left_6">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -169,7 +169,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_6">
+  <widget class="QPushButton" name="GDSU_btn_left_4">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -197,7 +197,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_7">
+  <widget class="QPushButton" name="GDSU_btn_right_2">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -225,7 +225,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_8">
+  <widget class="QPushButton" name="GDSU_btn_right_3">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -253,7 +253,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_9">
+  <widget class="QPushButton" name="GDSU_btn_right_5">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -281,7 +281,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_10">
+  <widget class="QPushButton" name="GDSU_btn_right_6">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -309,7 +309,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_11">
+  <widget class="QPushButton" name="GDSU_btn_right_1">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -337,7 +337,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_12">
+  <widget class="QPushButton" name="GDSU_btn_right_4">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -365,7 +365,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_vertical_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_13">
+  <widget class="QPushButton" name="GDSU_btn_bottom_1">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -393,7 +393,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_14">
+  <widget class="QPushButton" name="GDSU_btn_bottom_2">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -421,7 +421,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_15">
+  <widget class="QPushButton" name="GDSU_btn_bottom_3">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -449,7 +449,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_16">
+  <widget class="QPushButton" name="GDSU_btn_bottom_4">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -477,7 +477,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_17">
+  <widget class="QPushButton" name="GDSU_btn_bottom_5">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -505,7 +505,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_18">
+  <widget class="QPushButton" name="GDSU_btn_bottom_6">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -533,7 +533,7 @@
     <pixmap>:/ApPanels/Multimedia/GUI/GDSU_button_horizontal_pressed.png</pixmap>
    </property>
   </widget>
-  <widget class="QPushButton" name="GDSU_btn_19">
+  <widget class="QPushButton" name="GDSU_btn_bottom_7">
    <property name="enabled">
     <bool>true</bool>
    </property>
@@ -670,7 +670,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel1_switch1_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel1_switch1_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_1_switch_2">
@@ -698,7 +698,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel1_switch2_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel1_switch2_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_1_switch_3">
@@ -726,7 +726,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel1_switch3_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel1_switch3_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_1_button">
@@ -754,7 +754,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel1_red.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel1_red.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_2_switch_1">
@@ -782,7 +782,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_switch1_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_switch1_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_2_switch_2">
@@ -810,7 +810,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_switch2_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_switch2_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_2_switch_3">
@@ -838,7 +838,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_switch3_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_switch3_1.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="Panel_2_switch_4">
@@ -866,7 +866,7 @@
     </size>
    </property>
    <property name="pixmap" stdset="0">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_switch4_1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_switch4_1.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_1">
@@ -885,7 +885,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led1.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led1.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_2">
@@ -904,7 +904,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led2.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led2.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_3">
@@ -923,7 +923,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led3.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led3.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_4">
@@ -942,7 +942,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led4.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led4.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_5">
@@ -961,7 +961,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led5.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led5.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_6">
@@ -980,7 +980,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led6.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led6.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_7">
@@ -999,7 +999,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led7.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led7.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_8">
@@ -1018,7 +1018,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led8.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led8.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_9">
@@ -1037,7 +1037,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led9.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led9.png</pixmap>
    </property>
   </widget>
   <widget class="QLabel" name="Panel_2_led_10">
@@ -1056,7 +1056,7 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap resource="../Resources/ApPanels.qrc">:/ApPanels/Multimedia/GUI/AP_panel2_led10.png</pixmap>
+    <pixmap>:/ApPanels/Multimedia/GUI/AP_panel2_led10.png</pixmap>
    </property>
   </widget>
  </widget>
