--- a/GUI/Form/JtanPanels.ui
+++ b/GUI/Form/JtanPanels.ui
@@ -26,13 +26,13 @@
     <string/>
    </property>
    <property name="pixmap">
-    <pixmap>:/JtanPanels/Multimedia/GUI/JtanPanels.png</pixmap>
+    <pixmap>:/prefijoNuevo/Multimedia/GUI/JtanPanels.png</pixmap>
    </property>
   </widget>
   <widget class="QPushButton" name="GDSU_btn_left_1">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>293</y>
      <width>42</width>
      <height>53</height>
@@ -58,7 +58,7 @@
   <widget class="QPushButton" name="GDSU_btn_left_2">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>384</y>
      <width>42</width>
      <height>53</height>
@@ -84,7 +84,7 @@
   <widget class="QPushButton" name="GDSU_btn_left_3">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>474</y>
      <width>42</width>
      <height>53</height>
@@ -110,7 +110,7 @@
   <widget class="QPushButton" name="GDSU_btn_left_4">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>569</y>
      <width>42</width>
      <height>53</height>
@@ -136,7 +136,7 @@
   <widget class="QPushButton" name="GDSU_btn_left_5">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>660</y>
      <width>42</width>
      <height>53</height>
@@ -162,7 +162,7 @@
   <widget class="QPushButton" name="GDSU_btn_left_6">
    <property name="geometry">
     <rect>
-     <x>67</x>
+     <x>133</x>
      <y>753</y>
      <width>42</width>
      <height>53</height>
@@ -188,7 +188,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_1">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>293</y>
      <width>38</width>
      <height>53</height>
@@ -214,7 +214,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_2">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>384</y>
      <width>38</width>
      <height>53</height>
@@ -240,7 +240,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_3">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>474</y>
      <width>38</width>
      <height>53</height>
@@ -266,7 +266,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_4">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>569</y>
      <width>38</width>
      <height>53</height>
@@ -292,7 +292,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_5">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>660</y>
      <width>38</width>
      <height>53</height>
@@ -318,7 +318,7 @@
   <widget class="QPushButton" name="GDSU_btn_right_6">
    <property name="geometry">
     <rect>
-     <x>1059</x>
+     <x>1125</x>
      <y>753</y>
      <width>38</width>
      <height>53</height>
@@ -344,7 +344,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_1">
    <property name="geometry">
     <rect>
-     <x>228</x>
+     <x>294</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -370,7 +370,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_2">
    <property name="geometry">
     <rect>
-     <x>336</x>
+     <x>403</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -396,7 +396,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_3">
    <property name="geometry">
     <rect>
-     <x>447</x>
+     <x>513</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -422,7 +422,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_4">
    <property name="geometry">
     <rect>
-     <x>555</x>
+     <x>622</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -448,7 +448,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_5">
    <property name="geometry">
     <rect>
-     <x>663</x>
+     <x>730</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -474,7 +474,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_6">
    <property name="geometry">
     <rect>
-     <x>766</x>
+     <x>833</x>
      <y>897</y>
      <width>60</width>
      <height>35</height>
@@ -500,7 +500,7 @@
   <widget class="QPushButton" name="GDSU_btn_bottom_7">
    <property name="geometry">
     <rect>
-     <x>873</x>
+     <x>940</x>
      <y>897</y>
      <width>61</width>
      <height>35</height>
@@ -529,7 +529,7 @@
   <widget class="QPushButton" name="GDSU_btn_minus">
    <property name="geometry">
     <rect>
-     <x>59</x>
+     <x>125</x>
      <y>896</y>
      <width>54</width>
      <height>37</height>
@@ -555,7 +555,7 @@
   <widget class="QPushButton" name="GDSU_btn_plus">
    <property name="geometry">
     <rect>
-     <x>122</x>
+     <x>188</x>
      <y>896</y>
      <width>54</width>
      <height>37</height>
@@ -581,7 +581,7 @@
   <widget class="QPushButton" name="GDSU_btn_circle">
    <property name="geometry">
     <rect>
-     <x>969</x>
+     <x>1035</x>
      <y>896</y>
      <width>42</width>
      <height>39</height>
@@ -695,6 +695,84 @@
     <size>
      <width>104</width>
      <height>104</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="GDSU_switch_1">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>240</y>
+     <width>115</width>
+     <height>100</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0)</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_switch1_1.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_GDSU_switch1_1.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>115</width>
+     <height>100</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Panel_1_button_1">
+   <property name="geometry">
+    <rect>
+     <x>1412</x>
+     <y>473</y>
+     <width>127</width>
+     <height>124</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0)</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_button1.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_button1.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>127</width>
+     <height>1254</height>
+    </size>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="Panel_1_button_2">
+   <property name="geometry">
+    <rect>
+     <x>1538</x>
+     <y>472</y>
+     <width>139</width>
+     <height>126</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgba(255, 255, 255, 0)</string>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="icon">
+    <iconset>
+     <normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_button2.png</normaloff>:/JtanPanels/Multimedia/GUI/JTAN_panel1_button2.png</iconset>
+   </property>
+   <property name="iconSize">
+    <size>
+     <width>139</width>
+     <height>126</height>
     </size>
    </property>
   </widget>
